--- a/main.html
+++ b/main.html
@@ -7,6 +7,22 @@
 </head>
 
 <body>
+
+
+	<ul>
+		<li>
+			<a>
+				<img src="">
+			</a>
+		</li>
+
+		
+		<li>
+			<a>
+				<img src="https://course.acciojob.com/open-web-editor?question=fdaf31fe-5f40-4e25-bc00-0e5164e78513">
+			</a>
+		</li>
+	</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
