--- a/main.html
+++ b/main.html
@@ -11,14 +11,14 @@
 
 	<ul>
 		<li>
-			<a>
+			<a href="">
 				<img src="">
 			</a>
 		</li>
 
 		
 		<li>
-			<a>
+			<a href="">
 				<img src="https://course.acciojob.com/open-web-editor?question=fdaf31fe-5f40-4e25-bc00-0e5164e78513">
 			</a>
 		</li>
