--- a/main.html
+++ b/main.html
@@ -11,15 +11,15 @@
 
 	<ul>
 		<li>
-			<a href="">
-				<img src="">
+			<a href="https://en.wikipedia.org/wiki/Golden_Retriever">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg">
 			</a>
 		</li>
 
 		
 		<li>
-			<a href="">
-				<img src="https://course.acciojob.com/open-web-editor?question=fdaf31fe-5f40-4e25-bc00-0e5164e78513">
+			<a href="https://en.wikipedia.org/wiki/Poodle">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg">
 			</a>
 		</li>
 	</ul>
